Added more cells

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1521,7 +1521,7 @@
     prototype: Mouse
   - type: CellGeneration
     cells:
-      - MurineCells
+      - Murine
   - type: GhostRole
     makeSentient: true
     allowSpeech: true
