Added laser raptor spawner, Major the spacebear and Minor the plushie.

--- a/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
@@ -923,3 +923,31 @@
   - type: ConditionalSpawner
     prototypes:
     - MobHonkBot
+
+- type: entity
+  name: Space Bear Major Spawner
+  id: SpawnMobBearMajor
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+    - state: green
+    - state: major
+      sprite: Mobs/Animals/major.rsi
+  - type: ConditionalSpawner
+    prototypes:
+    - MobBearSpaceMajor
+
+- type: entity
+  name: Laser Raptor Spawner
+  id: SpawnMobLaserRaptor
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+    - state: green
+    - state: laser_raptor
+      sprite: Mobs/Aliens/laser_raptor.rsi
+  - type: ConditionalSpawner
+    prototypes:
+    - MobLaserRaptor
