--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -1599,3 +1599,17 @@
       params:
         volume: -9
         maxDistance: 3
+
+- type: entity
+  parent: BasePlushie
+  id: PlushieUrsaMinor
+  name: ursa minor plushie
+  description: You get the feeling that this plushie is higher ranked than you.
+  components:
+  - type: Sprite
+    state: minor
+  - type: Food
+    requiresSpecialDigestion: true
+  - type: FlavorProfile
+    flavors:
+      - stardust
