--- a/Resources/Prototypes/Entities/Objects/Misc/Flora/spaceshroom.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/Flora/spaceshroom.yml
@@ -1,41 +1,19 @@
 - type: entity
-  name: spaceshroom
-  parent: BaseStructure
+  parent: BaseGatherableFlora
   id: Spaceshroom
+  name: mystery cap mushrooms #renamed to avoid confusion with glowshrooms
   suffix: Structure
   description: A cluster of wild mushrooms that likes to grow in dark, moist environments.
   components:
     - type: Sprite
       sprite: Objects/Misc/spaceshroom.rsi
       state: structure
-    - type: Transform
-      anchored: true
-    - type: Physics
-      bodyType: Static
-    - type: Fixtures
-      fixtures:
-        fix1:
-          shape:
-            !type:PhysShapeCircle
-            radius: 0.2
-    - type: InteractionOutline
     - type: Gatherable
       toolWhitelist:
         components:
           - Hands
       loot:
         All: SpaceshroomGather
-    - type: Damageable
-      damageContainer: Inorganic
-      damageModifierSet: Wood
-    - type: Destructible
-      thresholds:
-        - trigger:
-            !type:DamageTrigger
-            damage: 150
-          behaviors:
-            - !type:DoActsBehavior
-              acts: [ "Destruction" ]
 
 - type: entityLootTable
   id: SpaceshroomGather
@@ -45,9 +23,9 @@
     maxAmount: 1
 
 - type: entity
-  name: spaceshroom
   parent: FoodProduceBase
   id: FoodSpaceshroom
+  name: mystery cap
   description: A wild mushroom. There's no telling what effect it could have...
   components:
   - type: Produce
@@ -103,7 +81,7 @@
 
 # Cooked Object
 - type: entity
-  name: cooked spaceshroom
+  name: cooked mystery cap
   parent: FoodProduceBase
   id: FoodSpaceshroomCooked
   description: A wild mushroom that has been cooked through. It seems the heat has removed its chemical effects.
