--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -633,3 +633,17 @@
       seedId: pyrotton
     - type: Sprite
       sprite: Objects/Specific/Hydroponics/pyrotton.rsi
+ 
+- type: entity
+  parent: SeedBase
+  name: packet of glowshroom spores
+  description: "Formally known as Mycena Bregprox."
+  id: GlowshroomSeeds
+  components:
+    - type: Seed
+      seedId: glowshroom
+    - type: Sprite
+      sprite: Objects/Misc/glowshroom.rsi
+    - type: Tag
+      tags:
+      - GlowshroomSpores
