--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -1,3 +1,13 @@
+# For mantles
+- type: loadoutEffectGroup
+  id: MasterCMO
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobChiefMedicalOfficer
+      time: 72000 #20 hrs
+
 # Jumpsuit
 - type: loadout
   id: ChiefMedicalOfficerJumpsuit
@@ -37,6 +47,13 @@
     neck: ClothingCloakCmo
 
 - type: loadout
+  id: ChiefMedicalOfficerMantle
+  equipment: ChiefMedicalOfficerMantle
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: MasterCMO
+
+- type: startingGear
   id: ChiefMedicalOfficerMantle
   equipment:
     neck: ClothingNeckMantleCMO
