--- a/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
@@ -1,12 +1,27 @@
-# Head
+# For mantles
+- type: loadoutEffectGroup
+  id: MasterRD
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobResearchDirector
+      time: 72000 #20 hrs
 
+# Head
 - type: loadout
   id: ResearchDirectorBeret
   startingGear: ScientificBeret
 
 # Neck
-
 - type: loadout
+  id: ResearchDirectorMantle
+  equipment: ResearchDirectorMantle
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: MasterRD
+
+- type: startingGear
   id: ResearchDirectorMantle
   equipment:
     neck: ClothingNeckMantleRD
