update MindComponent.RoleType when MindRoles change

--- a/Resources/Prototypes/Entities/Mobs/Player/familiars.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/familiars.yml
@@ -8,6 +8,7 @@
     makeSentient: true
     allowMovement: true
     allowSpeech: true
+    roleType: Familiar
     name: ghost-role-information-remilia-name
     description: ghost-role-information-remilia-description
     rules: ghost-role-information-familiar-rules
