--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
@@ -53,7 +53,8 @@
 
 - type: loadout
   id: QuartermasterMantle
-  equipment: QuartermasterMantle
+  equipment: 
+    neck: QuartermasterMantle
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterQM
