--- a/Resources/Prototypes/Loadouts/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/head_of_personnel.yml
@@ -43,7 +43,8 @@
 
 - type: loadout
   id: HoPMantle
-  equipment: HoPMantle
+  equipment:
+    neck: HoPMantle
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterHoP
