--- a/Resources/Prototypes/Loadouts/Jobs/Engineering/chief_engineer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Engineering/chief_engineer.yml
@@ -47,7 +47,8 @@
 
 - type: loadout
   id: ChiefEngineerMantle
-  equipment: ChiefEngineerMantle
+  equipment:
+    neck: ChiefEngineerMantle
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterCE
