--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -48,7 +48,8 @@
 
 - type: loadout
   id: ChiefMedicalOfficerMantle
-  equipment: ChiefMedicalOfficerMantle
+  equipment:
+    neck: ChiefMedicalOfficerMantle
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterCMO
