--- a/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
@@ -16,7 +16,8 @@
 # Neck
 - type: loadout
   id: ResearchDirectorMantle
-  equipment: ResearchDirectorMantle
+  equipment:
+    neck: ResearchDirectorMantle
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterRD
