--- a/Resources/Prototypes/Loadouts/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Security/head_of_security.yml
@@ -58,7 +58,8 @@
 
 - type: loadout
   id: HeadofSecurityMantle
-  equipment: HeadofSecurityMantle
+  equipment:
+    neck: HeadofSecurityMantle
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterHoS
