--- a/Resources/Prototypes/Catalog/Fills/Items/briefcases.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/briefcases.yml
@@ -10,7 +10,7 @@
 
 - type: entity
   id: BriefcaseSyndieSniperBundleFilled
-  parent: [BriefcaseSyndie, BaseSyndicateContraband]
+  parent: BriefcaseSyndie
   suffix: Syndicate, Sniper Bundle
   components:
   - type: Item
