--- a/Resources/Prototypes/Entities/Mobs/NPCs/behonker.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/behonker.yml
@@ -11,6 +11,7 @@
       name: ghost-role-information-behonker-name
       description: ghost-role-information-behonker-description
       rules: ghost-role-information-antagonist-rules
+      roleType: SoloAntagonist
       raffle:
         settings: default
     - type: GhostTakeoverAvailable
