--- a/Resources/Prototypes/Entities/Mobs/NPCs/elemental.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/elemental.yml
@@ -233,6 +233,7 @@
     prob: 0
     description: ghost-role-information-angry-slimes-description
     rules: ghost-role-information-angry-slimes-rules
+    roleType: TeamAntagonist
     raffle:
       settings: short
   - type: NpcFactionMember
