--- a/Resources/Prototypes/Entities/Mobs/Player/skeleton.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/skeleton.yml
@@ -18,6 +18,7 @@
     name: ghost-role-information-skeleton-pirate-name
     description: ghost-role-information-skeleton-pirate-description
     rules: ghost-role-information-freeagent-rules
+    roleType: FreeAgent
     raffle:
       settings: default
   - type: GhostTakeoverAvailable
@@ -35,6 +36,7 @@
     name: ghost-role-information-skeleton-biker-name
     description: ghost-role-information-skeleton-biker-description
     rules: ghost-role-information-freeagent-rules
+    roleType: FreeAgent
     raffle:
       settings: default
   - type: GhostTakeoverAvailable
