--- a/Resources/Prototypes/Entities/Mobs/NPCs/hellspawn.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/hellspawn.yml
@@ -13,6 +13,7 @@
     name: ghost-role-information-hellspawn-name
     description: ghost-role-information-hellspawn-description
     rules: ghost-role-information-antagonist-rules
+    roleType: SoloAntagonist
     raffle:
       settings: default
   - type: RotationVisuals
