--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -157,6 +157,7 @@
     name: ghost-role-information-honkbot-name
     description: ghost-role-information-honkbot-description
     rules: ghost-role-information-freeagent-rules
+    roleType: FreeAgent
     raffle:
       settings: default
   - type: GhostTakeoverAvailable
@@ -185,6 +186,7 @@
     name: ghost-role-information-jonkbot-name
     description: ghost-role-information-jonkbot-description
     rules: ghost-role-information-freeagent-rules
+    roleType: FreeAgent
     raffle:
       settings: default
   - type: InteractionPopup
@@ -319,6 +321,7 @@
     name: ghost-role-information-mimebot-name
     description: ghost-role-information-mimebot-description
     rules: ghost-role-information-freeagent-rules
+    roleType: FreeAgent
     raffle:
       settings: default
   - type: GhostTakeoverAvailable
