potentially fix test fail (?)

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
@@ -54,7 +54,7 @@
 - type: loadout
   id: QuartermasterMantle
   equipment: 
-    neck: QuartermasterMantle
+    neck: ClothingNeckMantleQM
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterQM
