--- a/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
@@ -54,7 +54,7 @@
 - type: loadout
   id: CaptainMantle
   equipment:
-    neck: CaptainMantle
+    neck: ClothingNeckMantleCap
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterCap
