--- a/Resources/Prototypes/Loadouts/Jobs/Security/head_of_security.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Security/head_of_security.yml
@@ -59,7 +59,7 @@
 - type: loadout
   id: HeadofSecurityMantle
   equipment:
-    neck: HeadofSecurityMantle
+    neck: ClothingNeckMantleHOS
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterHoS
