--- a/Resources/Prototypes/Loadouts/Jobs/Command/head_of_personnel.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/head_of_personnel.yml
@@ -44,7 +44,7 @@
 - type: loadout
   id: HoPMantle
   equipment:
-    neck: HoPMantle
+    neck: ClothingNeckMantleHOP
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterHoP
