--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -49,7 +49,7 @@
 - type: loadout
   id: ChiefMedicalOfficerMantle
   equipment:
-    neck: ChiefMedicalOfficerMantle
+    neck: ClothingNeckMantleCMO
   effects:
   - !type:GroupLoadoutEffect
     proto: MasterCMO
