--- a/Resources/Prototypes/Entities/Objects/Devices/Syndicate_Gadgets/reinforcement_teleporter.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Syndicate_Gadgets/reinforcement_teleporter.yml
@@ -26,6 +26,7 @@
     name: ghost-role-information-syndicate-reinforcement-spy-name
     description: ghost-role-information-syndicate-reinforcement-description
     rules: ghost-role-information-syndicate-reinforcement-rules
+    roleType: TeamAntagonist
     raffle:
       settings: default
   - type: GhostRoleMobSpawner
@@ -43,6 +44,7 @@
     name: ghost-role-information-nukeop-reinforcement-name
     description: ghost-role-information-nukeop-reinforcement-description
     rules: ghost-role-information-nukeop-reinforcement-rules
+    roleType: TeamAntagonist
     raffle:
       settings: default
   - type: GhostRoleMobSpawner
@@ -58,6 +60,7 @@
     name: ghost-role-information-syndicate-monkey-reinforcement-name
     description: ghost-role-information-syndicate-monkey-reinforcement-description
     rules: ghost-role-information-syndicate-monkey-reinforcement-rules
+    roleType: TeamAntagonist
     raffle:
       settings: default
   - type: GhostRoleMobSpawner
@@ -83,6 +86,7 @@
     name: ghost-role-information-SyndiCat-name
     description: ghost-role-information-SyndiCat-description
     rules: ghost-role-information-SyndiCat-rules
+    roleType: TeamAntagonist
     raffle:
       settings: default
   - type: GhostRoleMobSpawner
@@ -101,6 +105,7 @@
       name: ghost-role-information-syndie-assaultborg-name
       description: ghost-role-information-syndie-assaultborg-description
       rules: ghost-role-information-silicon-rules
+      roleType: Silicon # TODO:ERRANT subvertedsilicion?
       raffle:
         settings: default
     - type: GhostRoleMobSpawner
