--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -92,6 +92,7 @@
     roleName: pai-system-role-name-syndicate
     roleDescription: pai-system-role-description-syndicate
     roleRules: ghost-role-information-familiar-rules
+    roleType: Familiar
   - type: IntrinsicRadioTransmitter
     channels:
     - Syndicate
@@ -124,6 +125,7 @@
     roleName: pai-system-role-name-potato
     roleDescription: pai-system-role-description-potato
     roleRules: ghost-role-information-familiar-rules
+    roleType: Familiar
   - type: Appearance
   - type: GenericVisualizer
     visuals:
