Fix cells modification stores

--- a/Resources/Prototypes/Entities/Objects/Specific/Xenobiology/dish.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Xenobiology/dish.yml
@@ -24,6 +24,7 @@
   - type: Item
     sprite: Objects/Specific/Xenobiology/petri_dish.rsi
   - type: CellContainer
+    allowModifiers: false
     toolsTransferWhitelist:
       components:
         - CellCollector
