Contra pass round two

--- a/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/security.yml
@@ -148,7 +148,7 @@
         prob: 0.5
 
 - type: entity
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   id: GunSafeDisabler
   name: disabler safe
   components:
@@ -158,7 +158,7 @@
       amount: 5
 
 - type: entity
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   id: GunSafePistolMk58
   name: mk58 safe
   components:
@@ -170,7 +170,7 @@
       amount: 8
 
 - type: entity
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   id: GunSafeRifleLecter
   name: lecter safe
   components:
@@ -182,7 +182,7 @@
       amount: 4
 
 - type: entity
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   id: GunSafeSubMachineGunDrozd
   name: drozd safe
   components:
@@ -194,7 +194,7 @@
       amount: 4
 
 - type: entity
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   id: GunSafeShotgunEnforcer
   name: enforcer safe
   components:
@@ -206,7 +206,7 @@
       amount: 4
 
 - type: entity
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   id: GunSafeShotgunKammerer
   name: kammerer safe
   components:
@@ -220,7 +220,7 @@
 - type: entity
   id: GunSafeSubMachineGunWt550
   suffix: Wt550
-  parent: GunSafe
+  parent: [GunSafe, BaseRestrictedContraband]
   name: wt550 safe
   components:
   - type: StorageFill
