more bottles in bottle box, bottle variety

--- a/Resources/Prototypes/Catalog/Fills/Boxes/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Boxes/medical.yml
@@ -37,7 +37,13 @@
   - type: StorageFill
     contents:
       - id: ChemistryEmptyBottle01
-        amount: 6
+        amount: 2
+      - id: ChemistryEmptyBottle02
+        amount: 2
+      - id: ChemistryEmptyBottle03
+        amount: 2
+      - id: ChemistryEmptyBottle04
+        amount: 2
   - type: Sprite
     layers:
       - state: box
